--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,7 +33,7 @@ jobs:
           git commit -m "Upgrade script to ${{ github.ref_name }}" || echo "No changes to commit"
 
       - name: Push changes
-        run: git push
+        run: git push origin HEAD:main
 
       - name: Create Release
         uses: softprops/action-gh-release@v2.4.1
