--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,7 +33,9 @@ jobs:
           git commit -m "Upgrade script to ${{ github.ref_name }}" || echo "No changes to commit"
 
       - name: Push changes
-        run: git push origin HEAD:main
+        run: |
+          git fetch origin main
+          git push origin HEAD:main --force-with-lease
 
       - name: Create Release
         uses: softprops/action-gh-release@v2.4.1
